@@ -13,12 +13,19 @@ Architecture: all
 Depends: perl, libtrycatch-lite-perl, libfile-copy-recursive-perl, libsoap-lite-perl,
   libperl6-slurp-perl, qemu-kvm, ubuntu-vm-builder, libconfig-tiny-perl, libperl6-junction-perl,
   libterm-readline-gnu-perl, libtext-template-perl, libvirt-bin, libyaml-libyaml-perl,
-  libjson-xs-perl, sshpass, libattempt-perl, python-selenium (>= 2.28.0), libio-interface-perl
+  libjson-xs-perl, sshpass, libattempt-perl, libio-interface-perl, python-anste
 Recommends: recordmydesktop
 Description: Advanced Network Service Testing Environment
- ANSTE is a testing environment for advanced network services, mainly intended
- to automatize the integration tests of eBox Platform, furthermore it could be
- used to other similar purposes.
+ ANSTE is a tool to easily create, deploy and test network services on complex
+ scenarios using virtual machines.
  .
  URL: http://www.anste.org
 
+Package: python-anste
+Architecture: all
+Depends: python-selenium (>= 2.28.0), phantomjs | chromium-browser | firefox
+Description: Advanced Network Service Testing Environment (webdriver wrapper)
+ ANSTE is a tool to easily create, deploy and test network services on complex
+ scenarios using virtual machines.
+ .
+ URL: http://www.anste.org
