@@ -1,0 +1,1 @@
+lib/anste /usr/share/pyshared/
