@@ -1,0 +1,6 @@
+import wdriver
+
+__version__ = "0.1"
+
+def driver():
+    return wdriver.instance()
